# LokiTrans

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GITHUB_RELEASE_v1.0.0.md  How To Use.txt  LUKA_TEST.txt  README.md  RELEASE_CHECKLIST_v1.0.0.md  TEST_SYNC.txt  git cheatsheet.txt
include/lokitrans/: config.hpp  discovery.hpp  net.hpp
scripts/: build-linux.sh  build-windows.ps1  package-windows.ps1  quickstart-windows.ps1  setup-windows.ps1
src/: config.cpp  discovery.cpp  main.cpp  net.cpp
src/cli/: main.cpp
src/console/: console_ui.cpp  console_ui.h
src/crypto/: sha256.cpp  sha256.h
src/discovery/: discovery.cpp  discovery.h
src/net/: socket_init.cpp  socket_init.h  socket_utils.cpp  socket_utils.h  winsock_init.cpp  winsock_init.h
src/transfer/: protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
